objects/L2I_Account_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account_Site_ID__c</fullName>
        <description>Mapped from SITE_USE_ID in Oracle</description>
        <externalId>true</externalId>
        <label>Account Site ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Mapped from CUST_ACCOUNT_ID in Oracle</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sites</relationshipLabel>
        <relationshipName>Account_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <formula>Site__r.Address_Line_1__c</formula>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <formula>Site__r.Address_Line_2__c</formula>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <formula>Site__r.Address_Line_3__c</formula>
        <label>Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Address_Line_1__c +  
IF( ISBLANK(Address_Line_2__c) , &quot;&quot;, BR() + Address_Line_2__c) + 
IF( ISBLANK(Address_Line_3__c) , &quot;&quot;, BR() + Address_Line_3__c) + 
IF( ISBLANK(Address_Line_4__c) , &quot;&quot;, BR() + Address_Line_4__c) + 
IF( ISBLANK(City__c) &amp;&amp; ISBLANK(State__c) &amp;&amp; ISBLANK(Postal_Code__c), &quot;&quot;, BR()) + 
IF( ISBLANK(City__c) , &quot;&quot;, City__c) + 
IF( ISBLANK(City__c) || ISBLANK(State__c), &quot;&quot;, &quot;, &quot;) + 
IF( ISBLANK(State__c) , &quot;&quot;, State__c + &quot; &quot;) + 
IF( ISBLANK(Postal_Code__c) , &quot;&quot;, Postal_Code__c) +
IF( ISBLANK(County__c) , &quot;&quot;, BR() + County__c) +
IF( ISBLANK(Country__c) , &quot;&quot;, BR() + Country__c)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Site__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Site__r.Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Site__r.County__c</formula>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Customer_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Customer Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Site__r.Postal_Code__c</formula>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Mapped from LOCATION_ID in Oracle</description>
        <label>Site</label>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Account Sites</relationshipLabel>
        <relationshipName>Account_Sites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Site__r.State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Type__c</fullName>
        <label>Use Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Deliver To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Site</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Account Site</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>